--- a/inst/rmarkdown/templates/eisvogel/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/eisvogel/skeleton/skeleton.Rmd
@@ -16,7 +16,14 @@ bibliography: /home/amarakon/Documents/bibliography.bib
 csl: /home/amarakon/Documents/Citations/apa-no-initials.csl
 link-citations: yes
 classoption: letterpaper
-output: amaRyaml::eisvogel
+output:
+  bookdown::pdf_document2:
+    number_sections: true
+    toc_depth: 3
+    latex_engine: xelatex
+    template: eisvogel
+    includes:
+      in_header: includes/in_header.tex
 ---
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo=FALSE)
