--- a/inst/rmarkdown/templates/eisvogel/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/eisvogel/skeleton/skeleton.Rmd
@@ -19,13 +19,14 @@ csl: /home/amarakon/Documents/Citations/apa-no-initials.csl
 output: amaRyaml::eisvogel
 ---
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo=FALSE)
-knitr::opts_chunk$set(cache=TRUE)
-knitr::opts_chunk$set(attr.source='.numberLines')
-knitr::opts_chunk$set(dev='tikz')
+library(knitr)
 library(pander)
 library(DiagrammeR)
 library(DiagrammeRsvg)
 library(rsvg)
 options(tikzDefaultEngine='xetex')
+opts_chunk$set(echo=FALSE)
+opts_chunk$set(cache=TRUE)
+opts_chunk$set(attr.source='.numberLines')
+opts_chunk$set(dev='tikz')
 ```
