--- a/inst/includes/in_header.tex
+++ b/inst/includes/in_header.tex
@@ -1,4 +1,4 @@
-\usepackage{color, tcolorbox, soul, ulem, romannum, mdframed, circledsteps, tikz, hyperref, fmtcount}
+\usepackage{color, tcolorbox, soul, ulem, romannum, mdframed, circledsteps, tikz, fmtcount}
 \usepackage[group-separator=′, group-minimum-digits=3]{siunitx}
 
 \AtBeginDocument{\pagenumbering{arabic}}
