--- a/README.Rmd
+++ b/README.Rmd
@@ -30,7 +30,7 @@ two = c("![GitHub](examples/github/github.png)")
 
 templates = data.frame(one, two)
 
-kable(templates, 'pipe', align = 'cc', col.name = c("[Book](https://github.com/Amarakon55/amaRyaml/blob/master/examples/book/book.pdf)", "GitHub"))
+kable(templates, 'pipe', align = 'cc', col.name = c("[Book](examples/book/book.pdf)", "GitHub"))
 ```
 ```{r templates}
 one = c("![Eisvogel](examples/eisvogel/eisvogel.png)")
