--- a/README.Rmd
+++ b/README.Rmd
@@ -26,19 +26,19 @@ There are currently 4 templates available in this package:
 
 ```{r templates}
 one = c("![Book](examples/book/book.png)")
-two = c("![GitHub](examples/github/github.png)")
+two = c("![Eisvogel](examples/eisvogel/eisvogel.png)")
 
 templates = data.frame(one, two)
 
-kable(templates, 'pipe', align = 'cc', col.name = c("[Book](examples/book/book.pdf)", "GitHub"))
+kable(templates, 'pipe', align = 'cc', col.name = c("[Book](examples/book/book.pdf)", "[Eisvogel](examples/eisvogel/eisvogel.pdf)"))
 ```
 ```{r templates}
-one = c("![Eisvogel](examples/eisvogel/eisvogel.png)")
+one = c("![GitHub](examples/github/github.png)")
 two = c("![NorBeam](examples/norbeam/norbeam.png)")
 
 templates = data.frame(one, two)
 
-kable(templates, 'pipe', align = 'cc', col.name = c("Eisvogel", "NorBeam"))
+kable(templates, 'pipe', align = 'cc', col.name = c("[GitHub](examples/github/github.md)", "[NorBeam](examples/norbeam/norbeam.pdf)"))
 ```
 
 ## Installation
