replaced amaRyaml with amaryaml

--- a/inst/rmarkdown/templates/book/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/book/skeleton/skeleton.Rmd
@@ -15,7 +15,7 @@ documentclass: book
 geometry: margin = 1in
 bibliography: /home/amarakon/Documents/bibliography.bib
 csl: /home/amarakon/Documents/Citations/apa-no-initials.csl
-output: amaRyaml::book
+output: amaryaml::book
 ---
 ```{r setup, include=FALSE}
 library(knitr)
