--- a/inst/rmarkdown/templates/eisvogel/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/eisvogel/skeleton/skeleton.Rmd
@@ -16,7 +16,7 @@ classoption: letterpaper
 geometry: margin = 1in
 bibliography: /home/amarakon/Documents/bibliography.bib
 csl: /home/amarakon/Documents/Citations/apa-no-initials.csl
-output: amaRyaml::eisvogel
+output: amaryaml::eisvogel
 ---
 ```{r setup, include = FALSE}
 library(knitr)
