--- a/inst/rmarkdown/templates/norbeam/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/norbeam/skeleton/skeleton.Rmd
@@ -17,15 +17,7 @@ csl: /home/amarakon/Documents/Citations/apa-no-initials.csl
 output: amaryaml::norbeam
 ---
 ```{r setup, include = FALSE}
-library(knitr)
-library(pander)
-library(DiagrammeR)
-library(DiagrammeRsvg)
-library(rsvg)
+pacman::p_load(knitr, pander, DiagrammeR, DiagrammeRsvg, rsvg)
 options(tikzDefaultEngine = 'xetex')
-opts_chunk$set(echo = FALSE)
-opts_chunk$set(cache = TRUE)
-opts_chunk$set(cache.path = 'cache/')
-opts_chunk$set(fig.path = 'figures/')
-opts_chunk$set(dev = 'tikz')
+opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, cache = TRUE, cache.path = 'cache/', fig.path = 'figures/', dev = 'tikz')
 ```
