--- a/README.Rmd
+++ b/README.Rmd
@@ -5,7 +5,7 @@ output: amaryaml::github
 ```{r setup, include=FALSE}
 pacman::p_load(knitr, pander, DiagrammeR, DiagrammeRsvg, rsvg)
 options(tikzDefaultEngine = 'xetex')
-opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, cache = TRUE, cache.path = 'cache/', fig.path = 'figures/', dev = 'tikz')
+opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, cache = TRUE, dev = 'tikz')
 ```
 
 ## Description
