--- a/inst/rmarkdown/templates/book/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/book/skeleton/skeleton.Rmd
@@ -20,5 +20,5 @@ output: amaryaml::book
 ```{r setup, include=FALSE}
 pacman::p_load(knitr, pander, DiagrammeR, DiagrammeRsvg, rsvg)
 options(tikzDefaultEngine = 'xetex')
-opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, cache = TRUE, cache.path = 'cache/', fig.path = 'figures/', dev = 'tikz')
+opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, cache = TRUE, dev = 'tikz')
 ```
