changed underline to ul

--- a/inst/includes/in_header.tex
+++ b/inst/includes/in_header.tex
@@ -16,3 +16,5 @@
 \newcommand{\ccircled}[2]{\circled[outer color=#1]{#2}}
 \newcommand{\tcircle}[1]{\tikz \node[draw,circle]{#1};}
 \newcommand{\ctcircle}[2]{\tikz \node[draw=#1,circle]{#2};}
+
+\renewcommand{\underline}{\ul}
