shortened setup block

--- a/inst/rmarkdown/templates/eisvogel/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/eisvogel/skeleton/skeleton.Rmd
@@ -18,3 +18,6 @@ bibliography: /home/amarakon/Documents/bibliography.bib
 csl: /home/amarakon/Documents/Citations/apa-no-initials.csl
 output: amaryaml::eisvogel
 ---
+```{r setup, include = FALSE}
+source(system.file("includes", "setup.R", package = "amaryaml"))
+```
