--- a/inst/rmarkdown/templates/github/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/github/skeleton/skeleton.Rmd
@@ -2,7 +2,5 @@
 output: amaryaml::github
 ---
 ```{r setup, include = FALSE}
-pacman::p_load(knitr, pander, DiagrammeR, DiagrammeRsvg, rsvg)
-options(tikzDefaultEngine = 'xetex')
-opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, cache = TRUE, dev = 'tikz')
+source(system.file("includes", "setup.R", package = "amaryaml"))
 ```
