--- a/inst/rmarkdown/templates/norbeam/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/norbeam/skeleton/skeleton.Rmd
@@ -17,7 +17,5 @@ csl: /home/amarakon/Documents/Citations/apa-no-initials.csl
 output: amaryaml::norbeam
 ---
 ```{r setup, include = FALSE}
-pacman::p_load(knitr, pander, DiagrammeR, DiagrammeRsvg, rsvg)
-options(tikzDefaultEngine = 'xetex')
-opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, cache = TRUE, dev = 'tikz')
+source(system.file("includes", "setup.R", package = "amaryaml"))
 ```
