added placeholder text

--- a/inst/rmarkdown/templates/book/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/book/skeleton/skeleton.Rmd
@@ -1,4 +1,5 @@
 ---
+title: $~$
 author: Amar Al-Zubaidi
 date: \today
 mainfont: EB Garamond
@@ -17,3 +18,5 @@ output: amaryaml::book
 ```{r setup, include = FALSE}
 source(system.file("includes", "setup.R", package = "amaryaml"))
 ```
+
+$~$
