--- a/inst/rmarkdown/templates/norbeam/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/norbeam/skeleton/skeleton.Rmd
@@ -1,4 +1,5 @@
 ---
+title: $~$
 author: Amar Al-Zubaidi
 date: \today
 mainfont: Liberation Sans
@@ -16,3 +17,5 @@ output: amaryaml::norbeam
 ```{r setup, include = FALSE}
 source(system.file("includes", "setup.R", package = "amaryaml"))
 ```
+
+#
