--- a/inst/includes/in_header.tex
+++ b/inst/includes/in_header.tex
@@ -1,4 +1,4 @@
-\usepackage{lipsum, tcolorbox, soul, romannum, mdframed, circledsteps, tikz, fmtcount}
+\usepackage{lipsum, tcolorbox, romannum, mdframed, circledsteps, tikz, fmtcount}
 \usepackage[normalem]{ulem}
 \usepackage[group-separator=′, group-minimum-digits=3]{siunitx}
 
