--- a/inst/rmarkdown/templates/book/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/book/skeleton/skeleton.Rmd
@@ -2,6 +2,7 @@
 author: Amar Al-Zubaidi
 fontsize: 10pt
 reference-section-title: References
+colorlinks: true
 link-citations: yes
 documentclass: book
 geometry: margin = 1 in
