--- a/inst/rmarkdown/templates/eisvogel/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/eisvogel/skeleton/skeleton.Rmd
@@ -15,3 +15,7 @@ bibliography: /home/amarakon/Documents/bibliography.bib
 csl: /home/amarakon/Documents/Citations/apa-no-initials.csl
 output: amaryaml::eisvogel
 ---
+```{r setup, include = FALSE}
+library(amaryaml)
+source(pkg_file("includes", "inline.R"))
+```
