--- a/inst/includes/in_header.tex
+++ b/inst/includes/in_header.tex
@@ -1,3 +1,4 @@
-\@ifpackageloaded{setspace}{\setstretch{1}}
-\usepackage{enumitem}
+\usepackage{setspace, enumitem}
+
+\setstretch{1}
 \setlist{leftmargin=*, nosep, noitemsep, topsep=0pt, parsep=0pt, partopsep=0pt}
