set linestretch to 1

--- a/inst/rmarkdown/templates/eisvogel/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/eisvogel/skeleton/skeleton.Rmd
@@ -11,6 +11,7 @@ link-citations: yes
 table-use-row-colors: true
 classoption: letterpaper
 geometry: margin = 1 in
+linestretch: 1
 bibliography: /home/amarakon/Documents/bibliography.bib
 csl: /home/amarakon/Documents/Citations/apa-no-initials.csl
 output: amaryaml::eisvogel
