--- a/inst/rmarkdown/templates/book/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/book/skeleton/skeleton.Rmd
@@ -1,12 +1,13 @@
 ---
 author: Amar Al-Zubaidi
 fontsize: 10pt
-reference-section-title: References
+reference-section-title: Bibliography
 colorlinks: true
 link-citations: yes
 documentclass: book
 geometry: margin = 1 in
 bibliography: /home/amarakon/Documents/bibliography.bib
 csl: /home/amarakon/Documents/Citations/apa-no-initials.csl
+site: bookdown::bookdown_site
 output: amaryaml::book
 ---
