changed References to Bibliography

--- a/inst/rmarkdown/templates/eisvogel/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/eisvogel/skeleton/skeleton.Rmd
@@ -5,7 +5,7 @@ mainfont: Liberation Serif
 sansfont: Liberation Sans
 monofont: Liberation Mono
 fontsize: 11pt
-reference-section-title: References
+reference-section-title: Bibliography
 colorlinks: true
 link-citations: yes
 table-use-row-colors: true
