--- a/inst/includes/tablist.tex
+++ b/inst/includes/tablist.tex
@@ -6,6 +6,6 @@
            after ={\end{minipage}}}
 
 \newlist{tabenumerate}{enumerate}{1}
-\setlist[tabenumerate]{label=\arabic, nosep, leftmargin=*,
+\setlist[tabenumerate]{label=label*=\arabic*., nosep, leftmargin=*,
            before={\begin{minipage}[t]{\hsize}},
            after ={\end{minipage}}}
