--- a/inst/includes/tablist.tex
+++ b/inst/includes/tablist.tex
@@ -4,3 +4,8 @@
 \setlist[tabitemize]{label=\textbullet, nosep, leftmargin=*,
            before={\begin{minipage}[t]{\hsize}},
            after ={\end{minipage}}}
+
+\newlist{tabenumerate}{enumerate}{1}
+\setlist[tabenumerate]{label=label*=\arabic*., nosep, leftmargin=*,
+           before={\begin{minipage}[t]{\hsize}},
+           after ={\end{minipage}}}
