--- a/inst/rmarkdown/templates/eisvogel/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/eisvogel/skeleton/skeleton.Rmd
@@ -1,17 +1,12 @@
 ---
 author: Amar Al-Zubaidi
 date: \today
-mainfont: Liberation Serif
-sansfont: Liberation Sans
-monofont: Liberation Mono
 fontsize: 11pt
 reference-section-title: Bibliography
 colorlinks: true
-link-citations: yes
-table-use-row-colors: true
+link-citations: true
 classoption: letterpaper
 geometry: margin = 1 in
-linestretch: 1
 bibliography: /home/amarakon/Documents/bibliography.bib
 csl: /home/amarakon/Documents/Citations/apa-no-initials.csl
 output: amaryaml::eisvogel
