--- a/inst/examples/brochure/brochure.Rmd
+++ b/inst/examples/brochure/brochure.Rmd
@@ -117,7 +117,11 @@ Les ingénieurs logiciels se concentrent sur l'application des principes d'ingé
 
 -->
 
+\centering
+
 ![](media/nerd-emoji-fancam-cs.jpg)
+
+\RaggedRight
 
 \newpage
 
