--- a/inst/rmarkdown/templates/leaflet/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/leaflet/skeleton/skeleton.Rmd
@@ -8,5 +8,5 @@ links-as-notes: true
 documentclass: leaflet
 papersize: letter
 classoption: notumble
-output: amaryaml::brochure
+output: amaryaml::leaflet
 ---
