--- a/README.Rmd
+++ b/README.Rmd
@@ -36,12 +36,12 @@ kable(templates, align = 'cc', col.name = c("[GitHub](inst/examples/github/githu
 ```
 
 ```{r templates}
-one = c("![Brochure [1/2]](inst/examples/brochure/brochure-1.png)")
-two = c("![Brochure [2/2]](inst/examples/brochure/brochure-2.png)")
+one = c("![leaflet [1/2]](inst/examples/leaflet/leaflet-1.png)")
+two = c("![leaflet [2/2]](inst/examples/leaflet/leaflet-2.png)")
 
 templates = data.frame(one, two)
 
-kable(templates, align = 'cc', col.name = c("[Brochure [1/2]](inst/examples/brochure/brochure.pdf)", "[Brochure [2/2]](inst/examples/brochure/brochure.pdf)"))
+kable(templates, align = 'cc', col.name = c("[leaflet [1/2]](inst/examples/leaflet/leaflet.pdf)", "[leaflet [2/2]](inst/examples/leaflet/leaflet.pdf)"))
 ```
 
 ## GitHub
