--- a/inst/includes/tablist.tex
+++ b/inst/includes/tablist.tex
@@ -1,13 +1,13 @@
 \usepackage{enumitem}
 
 \newlist{tabitemize}{itemize}{1}
-\setlist[tabitemize]{label=\textbullet, noitemsep, leftmargin=*,
+\setlist[tabitemize]{label=\textbullet, nosep, leftmargin=*,
                      before={\begin{minipage}[t]{\hsize}},
 		     after ={\end{minipage}}}
 
 \newlist{tabenumerate}{enumerate}{1}
 \setlist[tabenumerate]{label*=\arabic*.,
                        leftmargin=*,
-		       noitemsep,
+		       nosep,
 		       before=\begin{minipage}[t]{\hsize},
 		       after=\end{minipage}}
