--- a/inst/includes/tablist.tex
+++ b/inst/includes/tablist.tex
@@ -1,5 +1,7 @@
 \usepackage{enumitem}
 
+\renewcommand{\labelenumii}{\alph{enumii}.}
+
 \newlist{tabitemize}{itemize}{1}
 \setlist[tabitemize]{label=\textbullet, nosep, leftmargin=*,
                      before={\begin{minipage}[t]{\hsize}},
