--- a/inst/rmarkdown/templates/book/resources/template.tex
+++ b/inst/rmarkdown/templates/book/resources/template.tex
@@ -27,7 +27,7 @@ $endif$
 $for(classoption)$
   $classoption$$sep$,
 $endfor$
-]{$if(documentclass$$documentclass$$else$book$endif$}
+]{$if(documentclass)$$documentclass$$else$book$endif$}
 $if(beamer)$
 $if(background-image)$
 \usebackgroundtemplate{%
