--- a/inst/rmarkdown/templates/card/resources/template.tex
+++ b/inst/rmarkdown/templates/card/resources/template.tex
@@ -6,6 +6,7 @@ $if(colorlinks)$
 $endif$
 
 \documentclass[
+  parskip=full,
 $if(fontsize)$
   $fontsize$,
 $else$
@@ -13,11 +14,13 @@ $else$
 $endif$
 $if(papersize)$
   $papersize$paper,
+$else$
+  letterpaper,
 $endif$
 $for(classoption)$
   $classoption$$sep$,
 $endfor$
-]{$documentclass$}
+]{scrartcl}
 
 \usepackage[margin=7.5mm,paperwidth=4.25in,paperheight=8.5in]{geometry}
 \usepackage[T1]{fontenc}
